fix z-index

--- a/less/forum.less
+++ b/less/forum.less
@@ -11,7 +11,7 @@
   justify-content: center;
   box-shadow: 0 0 .2rem rgb(0, 0, 0, .15);
   cursor: pointer;
-  z-index: 999999;
+  z-index: 1;
 
   i {
     color: #fff;
